--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
       });
     </script>
-
+    <!-- Disable ui AR/VR buttons, modal styling, and font -->
     <style>
       .a-enter-vr-button {
         display: none !important;
@@ -129,6 +129,7 @@
       </div>
     </div>
     
+    <!-- Main AFRAME scene -->
     <a-scene
       touch-raycast
       mindar-image="imageTargetSrc: src/targets.mind;"
@@ -138,6 +139,7 @@
       xr-mode-ui="XRMode: xr"
       device-orientation-permission-ui="enabled: true"
     >
+      <!-- Import 3D button assetts -->
       <a-assets>
         <img id="card" src="src/Lumi.jpg" />
         <a-asset-item id="asset-avatarModel" src="src/Tank.glb"></a-asset-item>
@@ -154,7 +156,7 @@
           position="0 0 -0.75"
         ></a-entity>
       </a-camera>
-
+      <!-- Set button position, animations, and intersectable attribute -->
       <a-entity id="objects" mindar-image-target="targetIndex: 0">
         <a-plane src="#card" position="0 0 0" height="1" width="1" rotation="0 0 0"></a-plane>
 
@@ -168,6 +170,7 @@
       </a-entity>
     </a-scene>
 
+    <!-- Handles modal close and exit buttons -->
     <script>
       document.getElementById("closeModal").addEventListener("click", function() {
         document.getElementById("instructionsModal").style.display = "none";
@@ -183,7 +186,6 @@
           window.location.href = "https://ejmarkle.github.io/MyLinks/";
         });
       });
-    </script>
-    
+    </script>  
   </body>
 </html>
